// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapFifaMatchDetail — output characterization (CR-9 round-trip lock) > produces a stable EMPTY shape for null/null payloads 1`] = `
{
  "away": {
    "bench": [],
    "coach": null,
    "formation": null,
    "side": "away",
    "starters": [],
  },
  "awayStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "events": [],
  "home": {
    "bench": [],
    "coach": null,
    "formation": null,
    "side": "home",
    "starters": [],
  },
  "homeStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "matchId": "400021443",
  "winProbability": null,
}
`;

exports[`mapFifaMatchDetail — output characterization (CR-9 round-trip lock) > produces a stable MatchDetail over the real captured payloads 1`] = `
{
  "away": {
    "bench": [
      {
        "goals": 0,
        "id": "494246",
        "isCaptain": false,
        "isStarter": false,
        "name": "Sipho CHAINE",
        "photoUrl": "https://digitalhub.fifa.com/transform/c06e5903-d546-4bc6-a558-5ce40b336b64/CHAINE-Sipho_494246",
        "positionIndex": 16,
        "red": false,
        "shirtNumber": 16,
        "shortName": "Sipho CHAINE",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395059",
        "isCaptain": false,
        "isStarter": false,
        "name": "Ricardo GOSS",
        "photoUrl": "https://digitalhub.fifa.com/transform/2727bd1f-2d55-4a70-9bd5-58a96d4bf9bc/GOSS-Ricardo_395059",
        "positionIndex": 22,
        "red": false,
        "shirtNumber": 22,
        "shortName": "Ricardo GOSS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "510850",
        "isCaptain": false,
        "isStarter": false,
        "name": "Thabang MATULUDI",
        "photoUrl": "https://digitalhub.fifa.com/transform/33d0c67e-6bf5-41cb-a8ab-ad1cb098d166/MATULUDI-Thabang_510850",
        "positionIndex": 102,
        "red": false,
        "shirtNumber": 2,
        "shortName": "Thabang MATULUDI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504192",
        "isCaptain": false,
        "isStarter": false,
        "name": "Khulumani NDAMANE",
        "photoUrl": "https://digitalhub.fifa.com/transform/a3360ef3-4418-4f0a-9f74-318bdfa4ffd8/NDAMANE-Khulumani_504192",
        "positionIndex": 103,
        "red": false,
        "shirtNumber": 3,
        "shortName": "Khulumani NDAMANE",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504200",
        "isCaptain": false,
        "isStarter": false,
        "name": "Samukele KABINI",
        "photoUrl": "https://digitalhub.fifa.com/transform/29044a18-4871-49d0-af81-0b0887b148dd/KABINI-Samukelo_504200",
        "positionIndex": 118,
        "red": false,
        "shirtNumber": 18,
        "shortName": "Samukele KABINI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "502245",
        "isCaptain": false,
        "isStarter": false,
        "name": "Olwethu MAKHANYA",
        "photoUrl": "https://digitalhub.fifa.com/transform/97ff80ac-588e-4b15-8c20-5a3cbd7f30f8/MAKHANYA-Olwethu_502245",
        "positionIndex": 124,
        "red": false,
        "shirtNumber": 24,
        "shortName": "Olwethu MAKHANYA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419225",
        "isCaptain": false,
        "isStarter": false,
        "name": "Bradley CROSS",
        "photoUrl": "https://digitalhub.fifa.com/transform/6cee5a12-c935-4707-a3b8-2cad746fd5f5/CROSS-Bradley_419225",
        "positionIndex": 126,
        "red": false,
        "shirtNumber": 26,
        "shortName": "Bradley CROSS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "494248",
        "isCaptain": false,
        "isStarter": false,
        "name": "Thalente MBATHA",
        "photoUrl": "https://digitalhub.fifa.com/transform/5b2d0a1a-fe59-4136-90d3-4315c34b8500/MBATHA-Thalente_494248",
        "positionIndex": 205,
        "red": false,
        "shirtNumber": 5,
        "shortName": "Thalente MBATHA",
        "subbedOn": 56,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395984",
        "isCaptain": false,
        "isStarter": false,
        "name": "ZWANE",
        "photoUrl": "https://digitalhub.fifa.com/transform/8d294899-e656-4484-91b7-99d646bc590c/ZWANE-Themba_395984",
        "positionIndex": 211,
        "red": true,
        "shirtNumber": 11,
        "shortName": "ZWANE",
        "subbedOn": 61,
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "419223",
        "isCaptain": false,
        "isStarter": false,
        "name": "Oswin APPOLLIS",
        "photoUrl": "https://digitalhub.fifa.com/transform/91646285-a63d-4aeb-8036-da1dd055d6b5/APPOLLIS-Oswin_419223",
        "positionIndex": 307,
        "red": false,
        "shirtNumber": 7,
        "shortName": "Oswin APPOLLIS",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504193",
        "isCaptain": false,
        "isStarter": false,
        "name": "Tshepang MOREMI",
        "photoUrl": "https://digitalhub.fifa.com/transform/5579f48c-4b61-4def-b314-75e873c36961/MOREMI-Tshepang_504193",
        "positionIndex": 308,
        "red": false,
        "shirtNumber": 8,
        "shortName": "Tshepang MOREMI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "486161",
        "isCaptain": false,
        "isStarter": false,
        "name": "Relebohile MOFOKENG",
        "photoUrl": "https://digitalhub.fifa.com/transform/4946f2f8-a809-451e-962b-7b7426bbd633/MOFOKENG-Relebohile_486161",
        "positionIndex": 310,
        "red": false,
        "shirtNumber": 10,
        "shortName": "Relebohile MOFOKENG",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "463234",
        "isCaptain": false,
        "isStarter": false,
        "name": "MASEKO",
        "photoUrl": "https://digitalhub.fifa.com/transform/a8c4c69e-b074-4a10-9bfc-38c85175560d/MASEKO-Thapelo_463234",
        "positionIndex": 312,
        "red": false,
        "shirtNumber": 12,
        "shortName": "MASEKO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430917",
        "isCaptain": false,
        "isStarter": false,
        "name": "Evidence MAKGOPA",
        "photoUrl": "https://digitalhub.fifa.com/transform/9c040766-d546-4007-9fa3-eb50206cd689/MAKGOPA-Evidence_430917",
        "positionIndex": 317,
        "red": false,
        "shirtNumber": 17,
        "shortName": "Evidence MAKGOPA",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "506038",
        "isCaptain": false,
        "isStarter": false,
        "name": "Kamogelo SEBELEBELE",
        "photoUrl": "https://digitalhub.fifa.com/transform/dcd49deb-cb7f-4620-8f79-98a802624026/SEBELEBELE-Kamogelo_506038",
        "positionIndex": 325,
        "red": false,
        "shirtNumber": 25,
        "shortName": "Kamogelo SEBELEBELE",
        "yellow": false,
      },
    ],
    "coach": "Hugo BROOS",
    "formation": "5-3-2",
    "side": "away",
    "starters": [
      {
        "goals": 0,
        "id": "395986",
        "isCaptain": true,
        "isStarter": true,
        "name": "WILLIAMS",
        "photoUrl": "https://digitalhub.fifa.com/transform/b95f9142-251c-4943-911c-9c8d7ad8dd1c/WILLIAMS-Ronwen_395986",
        "positionIndex": 1,
        "red": false,
        "shirtNumber": 1,
        "shortName": "WILLIAMS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395050",
        "isCaptain": false,
        "isStarter": true,
        "name": "MODIBA",
        "photoUrl": "https://digitalhub.fifa.com/transform/e5ddfbfb-b601-4ff8-83a5-f55162967798/MODIBA-Aubrey_395050",
        "positionIndex": 106,
        "red": false,
        "shirtNumber": 6,
        "shortName": "MODIBA",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504199",
        "isCaptain": false,
        "isStarter": true,
        "name": "Mbekezeli MBOKAZI",
        "photoUrl": "https://digitalhub.fifa.com/transform/978b666d-f320-4d49-b717-a08fa7ae456f/MBOKAZI-Mbekezeli_504199",
        "positionIndex": 114,
        "red": false,
        "shirtNumber": 14,
        "shortName": "Mbekezeli MBOKAZI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "463221",
        "isCaptain": false,
        "isStarter": true,
        "name": "Nkosinathi SIBISI",
        "photoUrl": "https://digitalhub.fifa.com/transform/1fb66990-444a-4e4b-9047-41c2542ea91a/SIBISI-Nkosinathi_463221",
        "positionIndex": 119,
        "red": false,
        "shirtNumber": 19,
        "shortName": "Nkosinathi SIBISI",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "463218",
        "isCaptain": false,
        "isStarter": true,
        "name": "MUDAU",
        "photoUrl": "https://digitalhub.fifa.com/transform/29d0b36b-2727-4fc0-ab1e-4d21b5858f5a/MUDAU-Khuliso_463218",
        "positionIndex": 120,
        "red": false,
        "shirtNumber": 20,
        "shortName": "MUDAU",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "506039",
        "isCaptain": false,
        "isStarter": true,
        "name": "Ime OKON",
        "photoUrl": "https://digitalhub.fifa.com/transform/5f5d2eb3-3964-486f-9faa-800200078576/OKON-Ime_506039",
        "positionIndex": 121,
        "red": false,
        "shirtNumber": 21,
        "shortName": "Ime OKON",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403616",
        "isCaptain": false,
        "isStarter": true,
        "name": "MOKOENA",
        "photoUrl": "https://digitalhub.fifa.com/transform/bf36679b-73eb-4813-a99d-b9673439dd05/MOKOENA-Teboho_403616",
        "positionIndex": 204,
        "red": false,
        "shirtNumber": 4,
        "shortName": "MOKOENA",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "390475",
        "isCaptain": false,
        "isStarter": true,
        "name": "SITHOLE",
        "photoUrl": "https://digitalhub.fifa.com/transform/200f1c50-a60a-4c33-ad94-b4dabd605f35/SITHOLE-Sphephelo_390475",
        "positionIndex": 213,
        "red": true,
        "shirtNumber": 13,
        "shortName": "SITHOLE",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "463236",
        "isCaptain": false,
        "isStarter": true,
        "name": "ADAMS",
        "photoUrl": "https://digitalhub.fifa.com/transform/d238f3d6-bc5d-44c6-b312-2989524bea12/ADAMS-Jayden_463236",
        "positionIndex": 223,
        "red": false,
        "shirtNumber": 23,
        "shortName": "ADAMS",
        "subbedOff": 61,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419211",
        "isCaptain": false,
        "isStarter": true,
        "name": "Lyle FOSTER",
        "photoUrl": "https://digitalhub.fifa.com/transform/155c969c-63e1-438e-bd3d-ce587ac212c6/FOSTER-Lyle_419211",
        "positionIndex": 309,
        "red": false,
        "shirtNumber": 9,
        "shortName": "Lyle FOSTER",
        "subbedOff": 56,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "481242",
        "isCaptain": false,
        "isStarter": true,
        "name": "RAYNERS",
        "photoUrl": "https://digitalhub.fifa.com/transform/f13ebf2a-3cac-4af7-bd73-2b70ed5ecc1a/RAYNERS-Iqraam_481242",
        "positionIndex": 315,
        "red": false,
        "shirtNumber": 15,
        "shortName": "RAYNERS",
        "subbedOff": 76,
        "yellow": false,
      },
    ],
  },
  "awayStats": {
    "corners": 1,
    "fouls": 8,
    "offsides": 1,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 2,
    "shots": 3,
    "shotsOnTarget": null,
    "yellowCards": 2,
  },
  "events": [
    {
      "id": "1681660928",
      "kind": "period",
      "minute": 0,
      "period": "first-half",
      "playerId": null,
      "playerName": null,
      "side": "home",
    },
    {
      "id": "108447761",
      "kind": "assist",
      "minute": 9,
      "period": "first-half",
      "playerId": "419518",
      "playerName": "Erik LIRA",
      "relatedName": "Julian QUINONES",
      "side": "home",
    },
    {
      "id": "61216779",
      "kind": "goal",
      "minute": 9,
      "period": "first-half",
      "playerId": "429157",
      "playerName": "Julian QUINONES",
      "side": "home",
    },
    {
      "id": "563317787",
      "kind": "yellow",
      "minute": 17,
      "period": "first-half",
      "playerId": "403616",
      "playerName": "MOKOENA",
      "side": "away",
    },
    {
      "id": "928372749",
      "kind": "yellow",
      "minute": 23,
      "period": "first-half",
      "playerId": "464533",
      "playerName": "Brian GUTIERREZ",
      "side": "home",
    },
    {
      "id": "402209831",
      "kind": "period",
      "minute": 45,
      "period": "first-half",
      "playerId": null,
      "playerName": null,
      "side": "home",
    },
    {
      "id": "1415482393",
      "kind": "period",
      "minute": 45,
      "period": "second-half",
      "playerId": null,
      "playerName": null,
      "side": "home",
    },
    {
      "id": "1686141993",
      "kind": "red",
      "minute": 49,
      "period": "second-half",
      "playerId": "390475",
      "playerName": "SITHOLE",
      "side": "away",
    },
    {
      "id": "2077109293",
      "kind": "substitution",
      "minute": 56,
      "period": "second-half",
      "playerId": "419211",
      "playerName": "Lyle FOSTER",
      "relatedName": "Thalente MBATHA",
      "side": "away",
    },
    {
      "id": "249954348",
      "kind": "substitution",
      "minute": 61,
      "period": "second-half",
      "playerId": "463236",
      "playerName": "ADAMS",
      "relatedName": "Themba ZWANE",
      "side": "away",
    },
    {
      "id": "530520113",
      "kind": "substitution",
      "minute": 66,
      "period": "second-half",
      "playerId": "464533",
      "playerName": "Brian GUTIERREZ",
      "relatedName": "Luis CHAVEZ",
      "side": "home",
    },
    {
      "id": "530520114",
      "kind": "substitution",
      "minute": 66,
      "period": "second-half",
      "playerId": "416576",
      "playerName": "Alvaro FIDALGO",
      "relatedName": "Gilberto MORA",
      "side": "home",
    },
    {
      "id": "602469432",
      "kind": "assist",
      "minute": 67,
      "period": "second-half",
      "playerId": "403585",
      "playerName": "Roberto ALVARADO",
      "relatedName": "RAÚL",
      "side": "home",
    },
    {
      "id": "598370344",
      "kind": "goal",
      "minute": 67,
      "period": "second-half",
      "playerId": "356731",
      "playerName": "RAÚL",
      "side": "home",
    },
    {
      "id": "1010552900",
      "kind": "yellow",
      "minute": 74,
      "period": "second-half",
      "playerId": "463221",
      "playerName": "Nkosinathi SIBISI",
      "side": "away",
    },
    {
      "id": "1153392686",
      "kind": "substitution",
      "minute": 76,
      "period": "second-half",
      "playerId": "419518",
      "playerName": "Erik LIRA",
      "relatedName": "Edson ALVAREZ",
      "side": "home",
    },
    {
      "id": "1153392687",
      "kind": "substitution",
      "minute": 76,
      "period": "second-half",
      "playerId": "356731",
      "playerName": "RAÚL",
      "relatedName": "Armando GONZALEZ",
      "side": "home",
    },
    {
      "id": "1188698182",
      "kind": "substitution",
      "minute": 76,
      "period": "second-half",
      "playerId": "481242",
      "playerName": "RAYNERS",
      "relatedName": "Evidence MAKGOPA",
      "side": "away",
    },
    {
      "id": "1188698181",
      "kind": "substitution",
      "minute": 76,
      "period": "second-half",
      "playerId": "395050",
      "playerName": "MODIBA",
      "relatedName": "Oswin APPOLLIS",
      "side": "away",
    },
    {
      "id": "1315119153",
      "kind": "substitution",
      "minute": 79,
      "period": "second-half",
      "playerId": "429157",
      "playerName": "Julian QUINONES",
      "relatedName": "Alexis VEGA",
      "side": "home",
    },
    {
      "id": "1609262154",
      "kind": "var",
      "minute": 82,
      "period": "second-half",
      "playerId": null,
      "playerName": null,
      "side": "home",
    },
    {
      "id": "1759804476",
      "kind": "red",
      "minute": 84,
      "period": "second-half",
      "playerId": "395984",
      "playerName": "ZWANE",
      "side": "away",
    },
    {
      "id": "2125180985",
      "kind": "red",
      "minute": 90,
      "period": "second-half",
      "playerId": "395516",
      "playerName": "Cesar MONTES",
      "side": "home",
    },
    {
      "id": "322661443",
      "kind": "period",
      "minute": 90,
      "period": "second-half",
      "playerId": null,
      "playerName": null,
      "side": "home",
    },
  ],
  "home": {
    "bench": [
      {
        "goals": 0,
        "id": "441260",
        "isCaptain": false,
        "isStarter": false,
        "name": "Carlos ACEVEDO",
        "photoUrl": "https://digitalhub.fifa.com/transform/b84beeec-be0c-493f-85fd-362bf0ead5c6/ACEVEDO-Carlos_441260",
        "positionIndex": 12,
        "red": false,
        "shirtNumber": 12,
        "shortName": "Carlos ACEVEDO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "215285",
        "isCaptain": false,
        "isStarter": false,
        "name": "G. OCHOA",
        "photoUrl": "https://digitalhub.fifa.com/transform/fedeac9f-968d-4d4c-b08a-5b2bf157c396/OCHOA-Guillermo_215285",
        "positionIndex": 13,
        "red": false,
        "shirtNumber": 13,
        "shortName": "G. OCHOA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403596",
        "isCaptain": false,
        "isStarter": false,
        "name": "Jorge SANCHEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/8640d435-8aba-4b52-a864-9952d3a6db5c/SANCHEZ-Jorge_403596",
        "positionIndex": 102,
        "red": false,
        "shirtNumber": 2,
        "shortName": "Jorge SANCHEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "400634",
        "isCaptain": false,
        "isStarter": false,
        "name": "E. ÁLVAREZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/b1581870-6bef-4c29-9a06-f306bbf03ca8/ALVAREZ-Edson_400634",
        "positionIndex": 104,
        "red": false,
        "shirtNumber": 4,
        "shortName": "E. ÁLVAREZ",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "500038",
        "isCaptain": false,
        "isStarter": false,
        "name": "Mateo CHAVEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/8e8884ee-8964-4fb7-82d8-8a5d341e79a6/CHAVEZ-Mateo_500038",
        "positionIndex": 120,
        "red": false,
        "shirtNumber": 20,
        "shortName": "Mateo CHAVEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430763",
        "isCaptain": false,
        "isStarter": false,
        "name": "Luis ROMO",
        "photoUrl": "https://digitalhub.fifa.com/transform/bc7f864e-c553-4995-9eb3-62139e29a7d7/ROMO-Luis_430763",
        "positionIndex": 207,
        "red": false,
        "shirtNumber": 7,
        "shortName": "Luis ROMO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "372090",
        "isCaptain": false,
        "isStarter": false,
        "name": "Orbelin PINEDA",
        "photoUrl": "https://digitalhub.fifa.com/transform/ef0f99d9-6838-4b25-8a18-ecd9638bd51f/PINEDA-Orbelin_372090",
        "positionIndex": 217,
        "red": false,
        "shirtNumber": 17,
        "shortName": "Orbelin PINEDA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "461177",
        "isCaptain": false,
        "isStarter": false,
        "name": "VARGAS",
        "photoUrl": "https://digitalhub.fifa.com/transform/c0990d50-6120-459c-a66a-bd91ee7e46bc/VARGAS-Obed_461177",
        "positionIndex": 218,
        "red": false,
        "shirtNumber": 18,
        "shortName": "VARGAS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "500037",
        "isCaptain": false,
        "isStarter": false,
        "name": "Gilberto MORA",
        "photoUrl": "https://digitalhub.fifa.com/transform/028c85e0-509a-43c4-904a-58ce2d4f6f24/MORA-Gilberto_500037",
        "positionIndex": 219,
        "red": false,
        "shirtNumber": 19,
        "shortName": "Gilberto MORA",
        "subbedOn": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "448051",
        "isCaptain": false,
        "isStarter": false,
        "name": "L.CHAVEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/a09b97d9-6b02-45d4-aae8-b8ed274e5634/CHAVEZ-Luis_448051",
        "positionIndex": 224,
        "red": false,
        "shirtNumber": 24,
        "shortName": "L.CHAVEZ",
        "subbedOn": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430766",
        "isCaptain": false,
        "isStarter": false,
        "name": "Alexis VEGA",
        "photoUrl": "https://digitalhub.fifa.com/transform/eeeba73b-bc80-47f5-a1ff-f38f94ff2ee0/VEGA-Alexis_430766",
        "positionIndex": 310,
        "red": false,
        "shirtNumber": 10,
        "shortName": "Alexis VEGA",
        "subbedOn": 79,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430759",
        "isCaptain": false,
        "isStarter": false,
        "name": "Santiago GIMENEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/0e27d0c6-e057-4d0c-a603-3843fcd0c542/GIMENEZ-Santiago_430759",
        "positionIndex": 311,
        "red": false,
        "shirtNumber": 11,
        "shortName": "Santiago GIMENEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "514336",
        "isCaptain": false,
        "isStarter": false,
        "name": "Armando GONZALEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/81ce3e70-d37d-4109-b423-8cc7732527a1/GONZALEZ-Armando_514336",
        "positionIndex": 314,
        "red": false,
        "shirtNumber": 14,
        "shortName": "Armando GONZALEZ",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "406135",
        "isCaptain": false,
        "isStarter": false,
        "name": "Cesar HUERTA",
        "photoUrl": "https://digitalhub.fifa.com/transform/c5a00320-abe6-4d97-9892-e4afaf601fed/HUERTA-Cesar_406135",
        "positionIndex": 321,
        "red": false,
        "shirtNumber": 21,
        "shortName": "Cesar HUERTA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "386339",
        "isCaptain": false,
        "isStarter": false,
        "name": "G. MARTINEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/7f04e2d8-1f0b-491e-8551-5a856979bc97/MARTINEZ-Guillermo_386339",
        "positionIndex": 322,
        "red": false,
        "shirtNumber": 22,
        "shortName": "G. MARTINEZ",
        "yellow": false,
      },
    ],
    "coach": "Javier AGUIRRE",
    "formation": "4-1-2-3",
    "side": "home",
    "starters": [
      {
        "goals": 0,
        "id": "485070",
        "isCaptain": false,
        "isStarter": true,
        "name": "Raul RANGEL",
        "photoUrl": "https://digitalhub.fifa.com/transform/3ea092ae-841d-4dc6-9ca0-78eb4dfb97c7/RANGEL-Raul_485070",
        "positionIndex": 1,
        "red": false,
        "shirtNumber": 1,
        "shortName": "Raul RANGEL",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395516",
        "isCaptain": true,
        "isStarter": true,
        "name": "Cesar MONTES",
        "photoUrl": "https://digitalhub.fifa.com/transform/c8c3fa3a-9001-4221-ab3c-754158c0ad8a/MONTES-Cesar_395516",
        "positionIndex": 103,
        "red": true,
        "shirtNumber": 3,
        "shortName": "Cesar MONTES",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "425701",
        "isCaptain": false,
        "isStarter": true,
        "name": "Johan VASQUEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/838cb65f-3d60-4acb-855d-35a364c25f1a/VASQUEZ-Johan_425701",
        "positionIndex": 105,
        "red": false,
        "shirtNumber": 5,
        "shortName": "Johan VASQUEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "441261",
        "isCaptain": false,
        "isStarter": true,
        "name": "Israel REYES",
        "photoUrl": "https://digitalhub.fifa.com/transform/1e7c7c32-135c-46ba-9aff-429bfb1478aa/REYES-Israel_441261",
        "positionIndex": 115,
        "red": false,
        "shirtNumber": 15,
        "shortName": "Israel REYES",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "402772",
        "isCaptain": false,
        "isStarter": true,
        "name": "J. GALLARDO",
        "photoUrl": "https://digitalhub.fifa.com/transform/f1417540-93cb-4b82-9cfe-223e877d5923/GALLARDO-Jesus_402772",
        "positionIndex": 123,
        "red": false,
        "shirtNumber": 23,
        "shortName": "J. GALLARDO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419518",
        "isCaptain": false,
        "isStarter": true,
        "name": "Erik LIRA",
        "photoUrl": "https://digitalhub.fifa.com/transform/83109586-542d-4950-83eb-f3388757ef90/LIRA-Erik_419518",
        "positionIndex": 206,
        "red": false,
        "shirtNumber": 6,
        "shortName": "Erik LIRA",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "416576",
        "isCaptain": false,
        "isStarter": true,
        "name": "Alvaro FIDALGO",
        "photoUrl": "https://digitalhub.fifa.com/transform/fda68f1a-eceb-4219-8f1b-ed6b1f2e37ed/FIDALGO-Alvaro_416576",
        "positionIndex": 208,
        "red": false,
        "shirtNumber": 8,
        "shortName": "Alvaro FIDALGO",
        "subbedOff": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "464533",
        "isCaptain": false,
        "isStarter": true,
        "name": "Brian GUTIERREZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/dbca9708-0922-4d1d-97cb-1aa53696d6bd/GUTIERREZ-Brian_464533",
        "positionIndex": 226,
        "red": false,
        "shirtNumber": 26,
        "shortName": "Brian GUTIERREZ",
        "subbedOff": 66,
        "yellow": true,
      },
      {
        "goals": 1,
        "id": "356731",
        "isCaptain": false,
        "isStarter": true,
        "name": "RAÚL",
        "photoUrl": "https://digitalhub.fifa.com/transform/ec48d7a7-0cf7-4fc8-b999-e3c15fee5e98/JIMENEZ-Raul_356731",
        "positionIndex": 309,
        "red": false,
        "shirtNumber": 9,
        "shortName": "RAÚL",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 1,
        "id": "429157",
        "isCaptain": false,
        "isStarter": true,
        "name": "Julian QUINONES",
        "photoUrl": "https://digitalhub.fifa.com/transform/ea06becb-97b2-4f89-8464-5e0854cb7f81/QUINONES-Julian_429157",
        "positionIndex": 316,
        "red": false,
        "shirtNumber": 16,
        "shortName": "Julian QUINONES",
        "subbedOff": 79,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403585",
        "isCaptain": false,
        "isStarter": true,
        "name": "Roberto ALVARADO",
        "photoUrl": "https://digitalhub.fifa.com/transform/b1a8a14a-2a27-4524-a6ed-679aca39d35d/ALVARADO-Roberto_403585",
        "positionIndex": 325,
        "red": false,
        "shirtNumber": 25,
        "shortName": "Roberto ALVARADO",
        "yellow": false,
      },
    ],
  },
  "homeStats": {
    "corners": 3,
    "fouls": 10,
    "offsides": 1,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 1,
    "shots": 16,
    "shotsOnTarget": null,
    "yellowCards": 1,
  },
  "matchId": "400021443",
  "winProbability": {
    "away": 21,
    "draw": 4,
    "estimated": true,
    "home": 75,
  },
}
`;

exports[`mapFifaMatchDetail — output characterization (CR-9 round-trip lock) > produces a stable empty-events shape when the live payload is missing (timeline only) 1`] = `
{
  "away": {
    "bench": [],
    "coach": null,
    "formation": null,
    "side": "away",
    "starters": [],
  },
  "awayStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "events": [],
  "home": {
    "bench": [],
    "coach": null,
    "formation": null,
    "side": "home",
    "starters": [],
  },
  "homeStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "matchId": "400021443",
  "winProbability": null,
}
`;

exports[`mapFifaMatchDetail — output characterization (CR-9 round-trip lock) > produces a stable lineups-only shape when the timeline is missing (live only) 1`] = `
{
  "away": {
    "bench": [
      {
        "goals": 0,
        "id": "494246",
        "isCaptain": false,
        "isStarter": false,
        "name": "Sipho CHAINE",
        "photoUrl": "https://digitalhub.fifa.com/transform/c06e5903-d546-4bc6-a558-5ce40b336b64/CHAINE-Sipho_494246",
        "positionIndex": 16,
        "red": false,
        "shirtNumber": 16,
        "shortName": "Sipho CHAINE",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395059",
        "isCaptain": false,
        "isStarter": false,
        "name": "Ricardo GOSS",
        "photoUrl": "https://digitalhub.fifa.com/transform/2727bd1f-2d55-4a70-9bd5-58a96d4bf9bc/GOSS-Ricardo_395059",
        "positionIndex": 22,
        "red": false,
        "shirtNumber": 22,
        "shortName": "Ricardo GOSS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "510850",
        "isCaptain": false,
        "isStarter": false,
        "name": "Thabang MATULUDI",
        "photoUrl": "https://digitalhub.fifa.com/transform/33d0c67e-6bf5-41cb-a8ab-ad1cb098d166/MATULUDI-Thabang_510850",
        "positionIndex": 102,
        "red": false,
        "shirtNumber": 2,
        "shortName": "Thabang MATULUDI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504192",
        "isCaptain": false,
        "isStarter": false,
        "name": "Khulumani NDAMANE",
        "photoUrl": "https://digitalhub.fifa.com/transform/a3360ef3-4418-4f0a-9f74-318bdfa4ffd8/NDAMANE-Khulumani_504192",
        "positionIndex": 103,
        "red": false,
        "shirtNumber": 3,
        "shortName": "Khulumani NDAMANE",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504200",
        "isCaptain": false,
        "isStarter": false,
        "name": "Samukele KABINI",
        "photoUrl": "https://digitalhub.fifa.com/transform/29044a18-4871-49d0-af81-0b0887b148dd/KABINI-Samukelo_504200",
        "positionIndex": 118,
        "red": false,
        "shirtNumber": 18,
        "shortName": "Samukele KABINI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "502245",
        "isCaptain": false,
        "isStarter": false,
        "name": "Olwethu MAKHANYA",
        "photoUrl": "https://digitalhub.fifa.com/transform/97ff80ac-588e-4b15-8c20-5a3cbd7f30f8/MAKHANYA-Olwethu_502245",
        "positionIndex": 124,
        "red": false,
        "shirtNumber": 24,
        "shortName": "Olwethu MAKHANYA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419225",
        "isCaptain": false,
        "isStarter": false,
        "name": "Bradley CROSS",
        "photoUrl": "https://digitalhub.fifa.com/transform/6cee5a12-c935-4707-a3b8-2cad746fd5f5/CROSS-Bradley_419225",
        "positionIndex": 126,
        "red": false,
        "shirtNumber": 26,
        "shortName": "Bradley CROSS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "494248",
        "isCaptain": false,
        "isStarter": false,
        "name": "Thalente MBATHA",
        "photoUrl": "https://digitalhub.fifa.com/transform/5b2d0a1a-fe59-4136-90d3-4315c34b8500/MBATHA-Thalente_494248",
        "positionIndex": 205,
        "red": false,
        "shirtNumber": 5,
        "shortName": "Thalente MBATHA",
        "subbedOn": 56,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395984",
        "isCaptain": false,
        "isStarter": false,
        "name": "ZWANE",
        "photoUrl": "https://digitalhub.fifa.com/transform/8d294899-e656-4484-91b7-99d646bc590c/ZWANE-Themba_395984",
        "positionIndex": 211,
        "red": true,
        "shirtNumber": 11,
        "shortName": "ZWANE",
        "subbedOn": 61,
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "419223",
        "isCaptain": false,
        "isStarter": false,
        "name": "Oswin APPOLLIS",
        "photoUrl": "https://digitalhub.fifa.com/transform/91646285-a63d-4aeb-8036-da1dd055d6b5/APPOLLIS-Oswin_419223",
        "positionIndex": 307,
        "red": false,
        "shirtNumber": 7,
        "shortName": "Oswin APPOLLIS",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504193",
        "isCaptain": false,
        "isStarter": false,
        "name": "Tshepang MOREMI",
        "photoUrl": "https://digitalhub.fifa.com/transform/5579f48c-4b61-4def-b314-75e873c36961/MOREMI-Tshepang_504193",
        "positionIndex": 308,
        "red": false,
        "shirtNumber": 8,
        "shortName": "Tshepang MOREMI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "486161",
        "isCaptain": false,
        "isStarter": false,
        "name": "Relebohile MOFOKENG",
        "photoUrl": "https://digitalhub.fifa.com/transform/4946f2f8-a809-451e-962b-7b7426bbd633/MOFOKENG-Relebohile_486161",
        "positionIndex": 310,
        "red": false,
        "shirtNumber": 10,
        "shortName": "Relebohile MOFOKENG",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "463234",
        "isCaptain": false,
        "isStarter": false,
        "name": "MASEKO",
        "photoUrl": "https://digitalhub.fifa.com/transform/a8c4c69e-b074-4a10-9bfc-38c85175560d/MASEKO-Thapelo_463234",
        "positionIndex": 312,
        "red": false,
        "shirtNumber": 12,
        "shortName": "MASEKO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430917",
        "isCaptain": false,
        "isStarter": false,
        "name": "Evidence MAKGOPA",
        "photoUrl": "https://digitalhub.fifa.com/transform/9c040766-d546-4007-9fa3-eb50206cd689/MAKGOPA-Evidence_430917",
        "positionIndex": 317,
        "red": false,
        "shirtNumber": 17,
        "shortName": "Evidence MAKGOPA",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "506038",
        "isCaptain": false,
        "isStarter": false,
        "name": "Kamogelo SEBELEBELE",
        "photoUrl": "https://digitalhub.fifa.com/transform/dcd49deb-cb7f-4620-8f79-98a802624026/SEBELEBELE-Kamogelo_506038",
        "positionIndex": 325,
        "red": false,
        "shirtNumber": 25,
        "shortName": "Kamogelo SEBELEBELE",
        "yellow": false,
      },
    ],
    "coach": "Hugo BROOS",
    "formation": "5-3-2",
    "side": "away",
    "starters": [
      {
        "goals": 0,
        "id": "395986",
        "isCaptain": true,
        "isStarter": true,
        "name": "WILLIAMS",
        "photoUrl": "https://digitalhub.fifa.com/transform/b95f9142-251c-4943-911c-9c8d7ad8dd1c/WILLIAMS-Ronwen_395986",
        "positionIndex": 1,
        "red": false,
        "shirtNumber": 1,
        "shortName": "WILLIAMS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395050",
        "isCaptain": false,
        "isStarter": true,
        "name": "MODIBA",
        "photoUrl": "https://digitalhub.fifa.com/transform/e5ddfbfb-b601-4ff8-83a5-f55162967798/MODIBA-Aubrey_395050",
        "positionIndex": 106,
        "red": false,
        "shirtNumber": 6,
        "shortName": "MODIBA",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "504199",
        "isCaptain": false,
        "isStarter": true,
        "name": "Mbekezeli MBOKAZI",
        "photoUrl": "https://digitalhub.fifa.com/transform/978b666d-f320-4d49-b717-a08fa7ae456f/MBOKAZI-Mbekezeli_504199",
        "positionIndex": 114,
        "red": false,
        "shirtNumber": 14,
        "shortName": "Mbekezeli MBOKAZI",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "463221",
        "isCaptain": false,
        "isStarter": true,
        "name": "Nkosinathi SIBISI",
        "photoUrl": "https://digitalhub.fifa.com/transform/1fb66990-444a-4e4b-9047-41c2542ea91a/SIBISI-Nkosinathi_463221",
        "positionIndex": 119,
        "red": false,
        "shirtNumber": 19,
        "shortName": "Nkosinathi SIBISI",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "463218",
        "isCaptain": false,
        "isStarter": true,
        "name": "MUDAU",
        "photoUrl": "https://digitalhub.fifa.com/transform/29d0b36b-2727-4fc0-ab1e-4d21b5858f5a/MUDAU-Khuliso_463218",
        "positionIndex": 120,
        "red": false,
        "shirtNumber": 20,
        "shortName": "MUDAU",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "506039",
        "isCaptain": false,
        "isStarter": true,
        "name": "Ime OKON",
        "photoUrl": "https://digitalhub.fifa.com/transform/5f5d2eb3-3964-486f-9faa-800200078576/OKON-Ime_506039",
        "positionIndex": 121,
        "red": false,
        "shirtNumber": 21,
        "shortName": "Ime OKON",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403616",
        "isCaptain": false,
        "isStarter": true,
        "name": "MOKOENA",
        "photoUrl": "https://digitalhub.fifa.com/transform/bf36679b-73eb-4813-a99d-b9673439dd05/MOKOENA-Teboho_403616",
        "positionIndex": 204,
        "red": false,
        "shirtNumber": 4,
        "shortName": "MOKOENA",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "390475",
        "isCaptain": false,
        "isStarter": true,
        "name": "SITHOLE",
        "photoUrl": "https://digitalhub.fifa.com/transform/200f1c50-a60a-4c33-ad94-b4dabd605f35/SITHOLE-Sphephelo_390475",
        "positionIndex": 213,
        "red": true,
        "shirtNumber": 13,
        "shortName": "SITHOLE",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "463236",
        "isCaptain": false,
        "isStarter": true,
        "name": "ADAMS",
        "photoUrl": "https://digitalhub.fifa.com/transform/d238f3d6-bc5d-44c6-b312-2989524bea12/ADAMS-Jayden_463236",
        "positionIndex": 223,
        "red": false,
        "shirtNumber": 23,
        "shortName": "ADAMS",
        "subbedOff": 61,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419211",
        "isCaptain": false,
        "isStarter": true,
        "name": "Lyle FOSTER",
        "photoUrl": "https://digitalhub.fifa.com/transform/155c969c-63e1-438e-bd3d-ce587ac212c6/FOSTER-Lyle_419211",
        "positionIndex": 309,
        "red": false,
        "shirtNumber": 9,
        "shortName": "Lyle FOSTER",
        "subbedOff": 56,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "481242",
        "isCaptain": false,
        "isStarter": true,
        "name": "RAYNERS",
        "photoUrl": "https://digitalhub.fifa.com/transform/f13ebf2a-3cac-4af7-bd73-2b70ed5ecc1a/RAYNERS-Iqraam_481242",
        "positionIndex": 315,
        "red": false,
        "shirtNumber": 15,
        "shortName": "RAYNERS",
        "subbedOff": 76,
        "yellow": false,
      },
    ],
  },
  "awayStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "events": [],
  "home": {
    "bench": [
      {
        "goals": 0,
        "id": "441260",
        "isCaptain": false,
        "isStarter": false,
        "name": "Carlos ACEVEDO",
        "photoUrl": "https://digitalhub.fifa.com/transform/b84beeec-be0c-493f-85fd-362bf0ead5c6/ACEVEDO-Carlos_441260",
        "positionIndex": 12,
        "red": false,
        "shirtNumber": 12,
        "shortName": "Carlos ACEVEDO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "215285",
        "isCaptain": false,
        "isStarter": false,
        "name": "G. OCHOA",
        "photoUrl": "https://digitalhub.fifa.com/transform/fedeac9f-968d-4d4c-b08a-5b2bf157c396/OCHOA-Guillermo_215285",
        "positionIndex": 13,
        "red": false,
        "shirtNumber": 13,
        "shortName": "G. OCHOA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403596",
        "isCaptain": false,
        "isStarter": false,
        "name": "Jorge SANCHEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/8640d435-8aba-4b52-a864-9952d3a6db5c/SANCHEZ-Jorge_403596",
        "positionIndex": 102,
        "red": false,
        "shirtNumber": 2,
        "shortName": "Jorge SANCHEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "400634",
        "isCaptain": false,
        "isStarter": false,
        "name": "E. ÁLVAREZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/b1581870-6bef-4c29-9a06-f306bbf03ca8/ALVAREZ-Edson_400634",
        "positionIndex": 104,
        "red": false,
        "shirtNumber": 4,
        "shortName": "E. ÁLVAREZ",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "500038",
        "isCaptain": false,
        "isStarter": false,
        "name": "Mateo CHAVEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/8e8884ee-8964-4fb7-82d8-8a5d341e79a6/CHAVEZ-Mateo_500038",
        "positionIndex": 120,
        "red": false,
        "shirtNumber": 20,
        "shortName": "Mateo CHAVEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430763",
        "isCaptain": false,
        "isStarter": false,
        "name": "Luis ROMO",
        "photoUrl": "https://digitalhub.fifa.com/transform/bc7f864e-c553-4995-9eb3-62139e29a7d7/ROMO-Luis_430763",
        "positionIndex": 207,
        "red": false,
        "shirtNumber": 7,
        "shortName": "Luis ROMO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "372090",
        "isCaptain": false,
        "isStarter": false,
        "name": "Orbelin PINEDA",
        "photoUrl": "https://digitalhub.fifa.com/transform/ef0f99d9-6838-4b25-8a18-ecd9638bd51f/PINEDA-Orbelin_372090",
        "positionIndex": 217,
        "red": false,
        "shirtNumber": 17,
        "shortName": "Orbelin PINEDA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "461177",
        "isCaptain": false,
        "isStarter": false,
        "name": "VARGAS",
        "photoUrl": "https://digitalhub.fifa.com/transform/c0990d50-6120-459c-a66a-bd91ee7e46bc/VARGAS-Obed_461177",
        "positionIndex": 218,
        "red": false,
        "shirtNumber": 18,
        "shortName": "VARGAS",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "500037",
        "isCaptain": false,
        "isStarter": false,
        "name": "Gilberto MORA",
        "photoUrl": "https://digitalhub.fifa.com/transform/028c85e0-509a-43c4-904a-58ce2d4f6f24/MORA-Gilberto_500037",
        "positionIndex": 219,
        "red": false,
        "shirtNumber": 19,
        "shortName": "Gilberto MORA",
        "subbedOn": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "448051",
        "isCaptain": false,
        "isStarter": false,
        "name": "L.CHAVEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/a09b97d9-6b02-45d4-aae8-b8ed274e5634/CHAVEZ-Luis_448051",
        "positionIndex": 224,
        "red": false,
        "shirtNumber": 24,
        "shortName": "L.CHAVEZ",
        "subbedOn": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430766",
        "isCaptain": false,
        "isStarter": false,
        "name": "Alexis VEGA",
        "photoUrl": "https://digitalhub.fifa.com/transform/eeeba73b-bc80-47f5-a1ff-f38f94ff2ee0/VEGA-Alexis_430766",
        "positionIndex": 310,
        "red": false,
        "shirtNumber": 10,
        "shortName": "Alexis VEGA",
        "subbedOn": 79,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "430759",
        "isCaptain": false,
        "isStarter": false,
        "name": "Santiago GIMENEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/0e27d0c6-e057-4d0c-a603-3843fcd0c542/GIMENEZ-Santiago_430759",
        "positionIndex": 311,
        "red": false,
        "shirtNumber": 11,
        "shortName": "Santiago GIMENEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "514336",
        "isCaptain": false,
        "isStarter": false,
        "name": "Armando GONZALEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/81ce3e70-d37d-4109-b423-8cc7732527a1/GONZALEZ-Armando_514336",
        "positionIndex": 314,
        "red": false,
        "shirtNumber": 14,
        "shortName": "Armando GONZALEZ",
        "subbedOn": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "406135",
        "isCaptain": false,
        "isStarter": false,
        "name": "Cesar HUERTA",
        "photoUrl": "https://digitalhub.fifa.com/transform/c5a00320-abe6-4d97-9892-e4afaf601fed/HUERTA-Cesar_406135",
        "positionIndex": 321,
        "red": false,
        "shirtNumber": 21,
        "shortName": "Cesar HUERTA",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "386339",
        "isCaptain": false,
        "isStarter": false,
        "name": "G. MARTINEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/7f04e2d8-1f0b-491e-8551-5a856979bc97/MARTINEZ-Guillermo_386339",
        "positionIndex": 322,
        "red": false,
        "shirtNumber": 22,
        "shortName": "G. MARTINEZ",
        "yellow": false,
      },
    ],
    "coach": "Javier AGUIRRE",
    "formation": "4-1-2-3",
    "side": "home",
    "starters": [
      {
        "goals": 0,
        "id": "485070",
        "isCaptain": false,
        "isStarter": true,
        "name": "Raul RANGEL",
        "photoUrl": "https://digitalhub.fifa.com/transform/3ea092ae-841d-4dc6-9ca0-78eb4dfb97c7/RANGEL-Raul_485070",
        "positionIndex": 1,
        "red": false,
        "shirtNumber": 1,
        "shortName": "Raul RANGEL",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "395516",
        "isCaptain": true,
        "isStarter": true,
        "name": "Cesar MONTES",
        "photoUrl": "https://digitalhub.fifa.com/transform/c8c3fa3a-9001-4221-ab3c-754158c0ad8a/MONTES-Cesar_395516",
        "positionIndex": 103,
        "red": true,
        "shirtNumber": 3,
        "shortName": "Cesar MONTES",
        "yellow": true,
      },
      {
        "goals": 0,
        "id": "425701",
        "isCaptain": false,
        "isStarter": true,
        "name": "Johan VASQUEZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/838cb65f-3d60-4acb-855d-35a364c25f1a/VASQUEZ-Johan_425701",
        "positionIndex": 105,
        "red": false,
        "shirtNumber": 5,
        "shortName": "Johan VASQUEZ",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "441261",
        "isCaptain": false,
        "isStarter": true,
        "name": "Israel REYES",
        "photoUrl": "https://digitalhub.fifa.com/transform/1e7c7c32-135c-46ba-9aff-429bfb1478aa/REYES-Israel_441261",
        "positionIndex": 115,
        "red": false,
        "shirtNumber": 15,
        "shortName": "Israel REYES",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "402772",
        "isCaptain": false,
        "isStarter": true,
        "name": "J. GALLARDO",
        "photoUrl": "https://digitalhub.fifa.com/transform/f1417540-93cb-4b82-9cfe-223e877d5923/GALLARDO-Jesus_402772",
        "positionIndex": 123,
        "red": false,
        "shirtNumber": 23,
        "shortName": "J. GALLARDO",
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "419518",
        "isCaptain": false,
        "isStarter": true,
        "name": "Erik LIRA",
        "photoUrl": "https://digitalhub.fifa.com/transform/83109586-542d-4950-83eb-f3388757ef90/LIRA-Erik_419518",
        "positionIndex": 206,
        "red": false,
        "shirtNumber": 6,
        "shortName": "Erik LIRA",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "416576",
        "isCaptain": false,
        "isStarter": true,
        "name": "Alvaro FIDALGO",
        "photoUrl": "https://digitalhub.fifa.com/transform/fda68f1a-eceb-4219-8f1b-ed6b1f2e37ed/FIDALGO-Alvaro_416576",
        "positionIndex": 208,
        "red": false,
        "shirtNumber": 8,
        "shortName": "Alvaro FIDALGO",
        "subbedOff": 66,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "464533",
        "isCaptain": false,
        "isStarter": true,
        "name": "Brian GUTIERREZ",
        "photoUrl": "https://digitalhub.fifa.com/transform/dbca9708-0922-4d1d-97cb-1aa53696d6bd/GUTIERREZ-Brian_464533",
        "positionIndex": 226,
        "red": false,
        "shirtNumber": 26,
        "shortName": "Brian GUTIERREZ",
        "subbedOff": 66,
        "yellow": true,
      },
      {
        "goals": 1,
        "id": "356731",
        "isCaptain": false,
        "isStarter": true,
        "name": "RAÚL",
        "photoUrl": "https://digitalhub.fifa.com/transform/ec48d7a7-0cf7-4fc8-b999-e3c15fee5e98/JIMENEZ-Raul_356731",
        "positionIndex": 309,
        "red": false,
        "shirtNumber": 9,
        "shortName": "RAÚL",
        "subbedOff": 76,
        "yellow": false,
      },
      {
        "goals": 1,
        "id": "429157",
        "isCaptain": false,
        "isStarter": true,
        "name": "Julian QUINONES",
        "photoUrl": "https://digitalhub.fifa.com/transform/ea06becb-97b2-4f89-8464-5e0854cb7f81/QUINONES-Julian_429157",
        "positionIndex": 316,
        "red": false,
        "shirtNumber": 16,
        "shortName": "Julian QUINONES",
        "subbedOff": 79,
        "yellow": false,
      },
      {
        "goals": 0,
        "id": "403585",
        "isCaptain": false,
        "isStarter": true,
        "name": "Roberto ALVARADO",
        "photoUrl": "https://digitalhub.fifa.com/transform/b1a8a14a-2a27-4524-a6ed-679aca39d35d/ALVARADO-Roberto_403585",
        "positionIndex": 325,
        "red": false,
        "shirtNumber": 25,
        "shortName": "Roberto ALVARADO",
        "yellow": false,
      },
    ],
  },
  "homeStats": {
    "corners": 0,
    "fouls": 0,
    "offsides": 0,
    "passAccuracy": null,
    "passes": null,
    "possession": null,
    "redCards": 0,
    "shots": 0,
    "shotsOnTarget": null,
    "yellowCards": 0,
  },
  "matchId": "400021443",
  "winProbability": null,
}
`;
